--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "ng build"
+  command = "npm install --legacy-peer-deps && ng build"
   publish = "dist/cinefinder"
 
 [[redirects]]
